# Nagarik_Signals

./: .dockerignore  .gitignore  .vercelignore  ARCHITECTURE.md  Anchor.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  nagarik_signal_master_plan.md  package-lock.json  package.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  production-smoke.yml
apps/web/: package.json  playwright.config.ts
data/read-model/: nagarik-signal.json
docs/: privacy-and-safety.md  security-model.md  why-solana.md
idl/: nagarik_signal.json
nagarik-signal/: .dockerignore  .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  DEMO_SCRIPT.md  Dockerfile  README.md  ROADMAP.md  SAFETY.md  package-lock.json  package.json
nagarik-signal/docs/: competitors.md  data-provenance.md  demo-plan.md  judge-faq.md  operating-model.md  privacy-and-safety.md  product-faq.md  product-walkthrough.md  (+7 more)
programs/nagarik_signal/: Cargo.toml
programs/nagarik_signal/src/: errors.rs  lib.rs  state.rs
programs/nagarik_signal/src/instructions/: add_steward.rs  create_issue.rs  update_status.rs  verify_issue.rs
scripts/: create-stewards.ts  final-preflight.ts  prepare-anchor-test.mjs  reindex.ts  verify-deployment.ts  verify-proof-cli.ts  verify-public-data.ts
tests/: nagarik_signal.ts
viral_sync_reuse/: Anchor.toml  Cargo.toml  README.md  README_IMPORTED_FROM_VIRAL_SYNC.md  SECURITY.md  package.json  tsconfig.base.json  tsconfig.json
(+323 files in other folders)
