[package]
name = "nagarik_signal"
version = "0.1.0"
description = "Public proof for public problems"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nagarik_signal"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.30.1"
